# static-dev-server

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.node  README.md
src/: lib.rs  main.rs
src/handlers/: raw.rs
src/tools/: mime_type.rs  mod.rs
