[package]
name = "amoeba"
version = "0.1.0"
authors = ["Mykhailo Odyniuk <m.odyniuk@logicsolutions.com.ua>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
reroute = "0.3.2"
tokio = { version = "0.2", features = ["full"] }
mime = "0.3.14"
regex="1.3.1"